--- a/docs/css/custom_style.css
+++ b/docs/css/custom_style.css
@@ -11,9 +11,29 @@ th {
 }
 
 /* format like code */
-
 .md-typeset mark { 
   background-color:#f5f5f5;
   color: #404e56;
   padding: 2px
 } 
+
+/* format medium link embed */
+.medium-link {
+  border-style: solid;
+  border-color: #404e56;
+  padding: 10px;
+  width: 100%;
+	margin: 0 auto;
+	display: -webkit-flex; /* Safari */		
+	display: flex; /* Standard syntax */
+}
+
+.article-info {
+  width: 75%;
+  float: left
+}
+
+.article-img {
+  width: 25%;
+  float: right
+}
